src/main/java/lesson/example/java/core/lesson07/isp/good/Flyable.java
package lesson.example.java.core.lesson07.isp.good;

public interface Flyable {

    void fly();
}
