src/main/java/lesson/example/java/core/lesson07/isp/bad/Bird.java
package lesson.example.java.core.lesson07.isp.bad;

public interface Bird {

    void fly();

    void swim();

}
